# amazing_hunting

./: .gitignore  pyproject.toml  requirements.txt
amazing_hunting/: settings.py  urls.py
authentication/: models.py  serializers.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py
vacancies/: models.py  permissions.py  serializer.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py
